CRUD for Category

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor02">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" asp-action="Index" asp-controller="Category">
+                            <a class="nav-link active" asp-area="Admin" asp-action="Index" asp-controller="Category">
                                 Category
                                 <span class="visually-hidden">(current)</span>
                             </a>
